# Differential-Drive-Waypoint-Follower

./: Readme.md
diff_drive_controller_cpp/: CMakeLists.txt  package.xml
diff_drive_controller_cpp/include/diff_drive_controller_cpp/: wheel_controller.hpp
diff_drive_controller_cpp/src/: wheel_controller_node.cpp
diff_drive_robot/: package.xml  setup.py
diff_drive_robot/config/: controller_params.yaml  pid_params.yaml
diff_drive_robot/diff_drive_robot/: waypoint_follower.py
diff_drive_robot/launch/: navigation.launch.py  robot_gazebo.launch.py
diff_drive_robot/urdf/: diff_drive.gazebo  diff_drive.urdf.xacro  materials.xacro
diff_drive_robot/worlds/: empty_world.world
